--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
+body {
+  background-color: hsl(214, 17%, 92%);
+  font-family: "Barlow Semi Condensed", sans-serif;
+}
+
 .mainContainer {
-  border: 2px solid brown;
   height: 97vh;
   width: 100%;
   display: flex;
@@ -8,50 +12,209 @@
 }
 
 .gridContainer {
-  border: 2px solid black;
   height: auto;
   width: auto;
   padding: 1rem;
   display: grid;
-  grid-template-columns: repeat(4, 250px);
+  grid-template-columns: repeat(4, 242px);
   gap: 1.5rem;
   justify-content: center;
+  -moz-column-gap: 1.7rem;
+       column-gap: 1.7rem;
 }
 
 .gridItem {
-  border: 2px solid hsl(217, 19%, 35%);
   height: 200px;
   width: 300px;
+  border-radius: 7px;
 }
 
 .ItemOne {
+  background-image: url("images/bg-pattern-quotation.svg");
+  background-repeat: no-repeat;
+  background-position: 85.6% 0%;
+  background-size: 100px 94px;
   grid-column: 1/3;
   height: 16rem;
-  width: auto;
+  width: 28rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  background-color: hsl(263, 55%, 52%);
 }
 
 .ItemTwo {
   grid-column: 3/4;
-  height: 16rem;
+  height: 15.4rem;
   width: auto;
+  background-color: hsl(224, 10%, 45%);
+  display: flex;
+  padding-top: 10px;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .ItemThree {
   grid-column: 4/5;
   grid-row: 1/3;
   height: auto;
-  width: 15.4rem;
+  width: 10rem;
+  background-color: hsl(0, 0%, 100%);
+  padding-top: 10px;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .ItemFour {
   grid-column: 1/2;
-  height: 16rem;
+  height: 14.5rem;
   width: auto;
+  background-color: hsl(0, 0%, 100%);
+  padding-top: 10px;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .ItemFive {
   grid-column: 2/4;
   width: 710px;
-  height: 16rem;
+  height: 14.5rem;
   width: auto;
+  background-color: hsl(219, 29%, 14%);
+  padding-top: 10px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.profile, .profileThree, .profileTwo {
+  border-radius: 50%;
+  width: 1.6rem;
+  height: 1.6rem;
+  border: 2px solid hsl(264, 82%, 80%);
+}
+
+.profileTwo {
+  border: 2px solid hsl(214, 17%, 92%);
+}
+
+.profileThree {
+  border: none;
+  width: 1.8rem;
+  height: 1.8rem;
+}
+
+.imageDiv {
+  display: flex;
+  gap: 13px;
+  align-items: center;
+}
+
+.text, .textWhiteColor {
+  display: flex;
+  flex-direction: column;
+  gap: 1px;
+  color: hsl(0, 0%, 100%);
+  font-size: 12px;
+}
+
+.textWhiteColor {
+  color: hsl(217, 19%, 35%);
+}
+
+.textTwo {
+  font-weight: 100;
+}
+
+.descriptionOne, .descriptionGridThree, .descriptionGridTwo {
+  color: hsl(0, 0%, 100%);
+  font-family: "Barlow Semi Condensed", sans-serif;
+  font-size: 19px;
+  line-height: 115%;
+  font-weight: 500;
+  margin-top: 6px;
+  margin-bottom: 15px;
+}
+
+.descriptionGridTwo {
+  font-size: 18px;
+}
+
+.descriptionGridThree {
+  color: hsl(217, 19%, 35%);
+}
+
+.descriptionTwo, .descriptionThree, .descriptionFour {
+  color: hsl(0, 0%, 100%);
+  font-family: "Barlow Semi Condensed", sans-serif;
+  font-size: 12.8px;
+  font-weight: 250;
+}
+
+.descriptionThree, .descriptionFour {
+  color: hsl(217, 19%, 35%);
+  font-size: 11.2px;
+  line-height: 140%;
+  font-weight: 300;
+}
+
+.descriptionFour {
+  font-size: 12px;
+}
+
+@media (max-width: 768px) {
+  .mainContainer {
+    height: auto;
+  }
+  .gridContainer {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+    padding: 1rem;
+    max-width: 100%;
+  }
+  .gridItem {
+    width: 100%;
+    height: auto;
+  }
+  .ItemOne,
+  .ItemTwo,
+  .ItemThree,
+  .ItemFour,
+  .ItemFive {
+    grid-column: 1;
+    grid-row: auto;
+    width: auto;
+    height: auto;
+  }
+}
+@media (min-width: 1024px) and (max-width: 1024px) {
+  .mainContainer {
+    width: 100%;
+  }
+  .gridContainer {
+    width: 100%;
+    gap: 10px;
+  }
+  .ItemOne {
+    height: auto;
+    width: auto;
+  }
+  .ItemTwo {
+    grid-column: 3/4;
+    height: auto;
+    width: auto;
+  }
+  .ItemThree {
+    height: auto;
+    width: auto;
+  }
+  .ItemFour {
+    height: auto;
+    width: auto;
+  }
+  .ItemFive {
+    height: auto;
+    width: auto;
+  }
 }/*# sourceMappingURL=styles.css.map */
