--- a/styles.scss
+++ b/styles.scss
@@ -19,51 +19,275 @@
   align-items: center;
 }
 
+@mixin textOne($display: flex, $direction: column, $gap, $color, $font) {
+  display: $display;
+  flex-direction: $direction;
+  gap: $gap;
+  color: $color;
+  font-size: $font;
+}
+
+body {
+  background-color: $Grey100;
+  font-family: "Barlow Semi Condensed", sans-serif;
+}
+
 .mainContainer {
-  @include border(brown);
   @include heightWidth(97vh, 100%);
   @include flexCenter();
 }
 
 .gridContainer {
-  @include border(black);
   @include heightWidth(auto, auto);
   @include padding(1rem);
-
   display: grid;
-  grid-template-columns: repeat(4, 250px);
+  grid-template-columns: repeat(4, 242px);
   gap: 1.5rem;
   justify-content: center;
+  column-gap: 1.7rem;
 }
 
 .gridItem {
-  @include border($Grey500);
   @include heightWidth(200px, 300px);
+  border-radius: 7px;
 }
 
 .ItemOne {
+  background-image: url("images/bg-pattern-quotation.svg");
+  background-repeat: no-repeat;
+  background-position: 85.6% 0%;
+  background-size: 100px 94px;
   grid-column: 1 / 3;
-  @include heightWidth(16rem, auto);
+  @include heightWidth(16rem, 28rem);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  background-color: $Purple500;
 }
 
 .ItemTwo {
   grid-column: 3 / 4;
-  @include heightWidth(16rem, auto);
+  @include heightWidth(15.4rem, auto);
+  background-color: $Grey400;
+  // @include border(blue);
+  display: flex;
+  padding-top: 10px;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .ItemThree {
   grid-column: 4 / 5;
   grid-row: 1 / 3;
-  @include heightWidth(auto, 15.4rem);
+  @include heightWidth(auto, 10rem);
+  background-color: $White;
+  padding-top: 10px;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .ItemFour {
   grid-column: 1 / 2;
-  @include heightWidth(16rem, auto);
+  @include heightWidth(14.5rem, auto);
+  background-color: $White;
+  padding-top: 10px;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .ItemFive {
   grid-column: 2 / 4;
   width: 710px;
-  @include heightWidth(16rem, auto);
+  @include heightWidth(14.5rem, auto);
+  background-color: $Darkblue;
+  padding-top: 10px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.profile {
+  border-radius: 50%;
+  width: 1.6rem;
+  height: 1.6rem;
+  border: 2px solid $Purple300;
+}
+
+.profileTwo {
+  @extend .profile;
+  border: 2px solid $Grey100;
+}
+
+.profileThree {
+  @extend .profile;
+  border: none;
+  width: 1.8rem;
+  height: 1.8rem;
+}
+
+.imageDiv {
+  display: flex;
+  gap: 13px;
+  align-items: center;
+}
+
+.text {
+  @include textOne(flex, column, 1px, $White, 12px);
+}
+
+.textWhiteColor {
+  @extend .text;
+  color: $Grey500;
+}
+
+.textTwo {
+  font-weight: 100;
+}
+
+.descriptionOne {
+  color: $White;
+  font-family: "Barlow Semi Condensed", sans-serif;
+  font-size: 19px;
+  line-height: 115%;
+  font-weight: 500;
+  margin-top: 6px;
+  margin-bottom: 15px;
+}
+
+.descriptionGridTwo {
+  @extend .descriptionOne;
+  font-size: 18px;
+}
+
+.descriptionGridThree {
+  @extend .descriptionOne;
+  color: $Grey500;
+}
+
+.descriptionTwo {
+  color: $White;
+  font-family: "Barlow Semi Condensed", sans-serif;
+  font-size: 12.8px;
+  font-weight: 250;
+}
+.descriptionThree {
+  @extend .descriptionTwo;
+  color: $Grey500;
+  font-size: 11.2px;
+  line-height: 140%;
+  font-weight: 300;
+}
+
+.descriptionFour {
+  @extend .descriptionThree;
+  font-size: 12px;
+}
+
+@media (max-width: 768px) {
+  .mainContainer {
+    // outline: 2px solid black;
+    height: auto;
+  }
+
+  .gridContainer {
+    grid-template-columns: 1fr; // Single column
+    gap: 1rem;
+    padding: 1rem;
+    max-width: 100%;
+  }
+
+  .gridItem {
+    width: 100%;
+    height: auto;
+  }
+
+  .ItemOne,
+  .ItemTwo,
+  .ItemThree,
+  .ItemFour,
+  .ItemFive {
+    grid-column: 1;
+    grid-row: auto;
+    width: auto;
+    height: auto;
+  }
+}
+
+// @media (min-width: 426px) and (max-width: 768px) {
+//   body {
+//     // outline: 2px solid black;
+//   }
+
+//   .mainContainer {
+//     outline: 2px solid red;
+//     width: 100%;
+//   }
+
+//   .gridContainer {
+//     outline: 2px solid blue;
+//     width: 100%;
+//   }
+
+//   .gridContainer {
+//     grid-template-columns: 1fr; // Single column
+//     gap: 1rem;
+//     padding: 1rem;
+//     max-width: 100%;
+//   }
+
+//   .gridItem {
+//     width: 100%;
+//     height: auto;
+//   }
+
+//   .ItemOne,
+//   .ItemTwo,
+//   .ItemThree,
+//   .ItemFour,
+//   .ItemFive {
+//     grid-column: 1;
+//     grid-row: auto;
+//     width: auto;
+//     height: auto;
+//   }
+// }
+
+@media (min-width: 1024px) and (max-width: 1024px) {
+
+
+  .mainContainer {
+    // outline: 2px solid black;
+    // margin: 0 auto;
+    // padding: 3rem;
+    width: 100%;
+  }
+
+  .gridContainer {
+    // outline: 2px solid red;
+    width: 100%;
+    gap: 10px;
+   
+  }
+
+  .ItemOne {
+    @include heightWidth(auto, auto);
+  }
+
+  .ItemTwo {
+    grid-column: 3 / 4;
+    @include heightWidth(auto, auto);
+  }
+
+  .ItemThree {
+    @include heightWidth(auto, auto);
+  }
+
+  .ItemFour {
+    @include heightWidth(auto, auto);
+  }
+
+  .ItemFive {
+    @include heightWidth(auto, auto);
+  }
 }
