--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ body {
   padding-left: 2rem;
   padding-right: 2rem;
   background-color: hsl(263, 55%, 52%);
+  box-shadow: 0px 20px 80px -45px;
 }
 
 .ItemTwo {
@@ -54,6 +55,7 @@ body {
   padding-top: 10px;
   padding-left: 2rem;
   padding-right: 2rem;
+  box-shadow: 15px 20px 80px -50px;
 }
 
 .ItemThree {
@@ -65,6 +67,7 @@ body {
   padding-top: 10px;
   padding-left: 2rem;
   padding-right: 2rem;
+  box-shadow: 35px 45px 50px 0px rgba(0, 0, 0, 0.2);
 }
 
 .ItemFour {
@@ -75,6 +78,7 @@ body {
   padding-top: 10px;
   padding-left: 2rem;
   padding-right: 2rem;
+  box-shadow: 35px 45px 50px 0px rgba(0, 0, 0, 0.2);
 }
 
 .ItemFive {
@@ -86,6 +90,7 @@ body {
   padding-top: 10px;
   padding-left: 2rem;
   padding-right: 2rem;
+  box-shadow: 30px 40px 60px 0px rgba(0, 0, 0, 0.3);
 }
 
 .profile, .profileThree, .profileTwo {
@@ -116,7 +121,7 @@ body {
   flex-direction: column;
   gap: 1px;
   color: hsl(0, 0%, 100%);
-  font-size: 12px;
+  font-size: clamp(10px, 2.5vw, 12px);
 }
 
 .textWhiteColor {
@@ -130,7 +135,7 @@ body {
 .descriptionOne, .descriptionGridThree, .descriptionGridTwo {
   color: hsl(0, 0%, 100%);
   font-family: "Barlow Semi Condensed", sans-serif;
-  font-size: 19px;
+  font-size: clamp(14px, 1vw, 19px);
   line-height: 115%;
   font-weight: 500;
   margin-top: 6px;
@@ -138,7 +143,7 @@ body {
 }
 
 .descriptionGridTwo {
-  font-size: 18px;
+  font-size: clamp(12px, 4vw, 18px);
 }
 
 .descriptionGridThree {
