--- a/styles.scss
+++ b/styles.scss
@@ -65,17 +65,18 @@ body {
   padding-left: 2rem;
   padding-right: 2rem;
   background-color: $Purple500;
+  box-shadow: 0px 20px 80px -45px;
 }
 
 .ItemTwo {
   grid-column: 3 / 4;
   @include heightWidth(15.4rem, auto);
   background-color: $Grey400;
-  // @include border(blue);
   display: flex;
   padding-top: 10px;
   padding-left: 2rem;
   padding-right: 2rem;
+  box-shadow: 15px 20px 80px -50px;
 }
 
 .ItemThree {
@@ -86,6 +87,7 @@ body {
   padding-top: 10px;
   padding-left: 2rem;
   padding-right: 2rem;
+  box-shadow: 35px 45px 50px 0px rgba(0, 0, 0, 0.2);
 }
 
 .ItemFour {
@@ -95,6 +97,7 @@ body {
   padding-top: 10px;
   padding-left: 2rem;
   padding-right: 2rem;
+  box-shadow: 35px 45px 50px 0px rgba(0, 0, 0, 0.2);
 }
 
 .ItemFive {
@@ -105,6 +108,7 @@ body {
   padding-top: 10px;
   padding-left: 2rem;
   padding-right: 2rem;
+  box-shadow: 30px 40px 60px 0px rgba(0, 0, 0, 0.3);
 }
 
 .profile {
@@ -133,7 +137,7 @@ body {
 }
 
 .text {
-  @include textOne(flex, column, 1px, $White, 12px);
+  @include textOne(flex, column, 1px, $White, clamp(10px, 2.5vw, 12px));
 }
 
 .textWhiteColor {
@@ -148,7 +152,7 @@ body {
 .descriptionOne {
   color: $White;
   font-family: "Barlow Semi Condensed", sans-serif;
-  font-size: 19px;
+  font-size: clamp(14px, 1vw, 19px);
   line-height: 115%;
   font-weight: 500;
   margin-top: 6px;
@@ -157,7 +161,7 @@ body {
 
 .descriptionGridTwo {
   @extend .descriptionOne;
-  font-size: 18px;
+  font-size: clamp(12px, 4vw, 18px);
 }
 
 .descriptionGridThree {
@@ -186,12 +190,11 @@ body {
 
 @media (max-width: 768px) {
   .mainContainer {
-    // outline: 2px solid black;
     height: auto;
   }
 
   .gridContainer {
-    grid-template-columns: 1fr; // Single column
+    grid-template-columns: 1fr;
     gap: 1rem;
     padding: 1rem;
     max-width: 100%;
@@ -214,60 +217,14 @@ body {
   }
 }
 
-// @media (min-width: 426px) and (max-width: 768px) {
-//   body {
-//     // outline: 2px solid black;
-//   }
-
-//   .mainContainer {
-//     outline: 2px solid red;
-//     width: 100%;
-//   }
-
-//   .gridContainer {
-//     outline: 2px solid blue;
-//     width: 100%;
-//   }
-
-//   .gridContainer {
-//     grid-template-columns: 1fr; // Single column
-//     gap: 1rem;
-//     padding: 1rem;
-//     max-width: 100%;
-//   }
-
-//   .gridItem {
-//     width: 100%;
-//     height: auto;
-//   }
-
-//   .ItemOne,
-//   .ItemTwo,
-//   .ItemThree,
-//   .ItemFour,
-//   .ItemFive {
-//     grid-column: 1;
-//     grid-row: auto;
-//     width: auto;
-//     height: auto;
-//   }
-// }
-
 @media (min-width: 1024px) and (max-width: 1024px) {
-
-
   .mainContainer {
-    // outline: 2px solid black;
-    // margin: 0 auto;
-    // padding: 3rem;
     width: 100%;
   }
 
   .gridContainer {
-    // outline: 2px solid red;
     width: 100%;
     gap: 10px;
-   
   }
 
   .ItemOne {
